--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 /* main.css: afable 2016 */
 
+body {
+	background-color: #000 !important;	/* bkg color during transitions */	
+}
+
 .center-content {
 	text-align: center;
 	margin: 0 auto;
