/css/main.css: - fix class selectors. - added landscape & portrait img classes.
/js/main.js:
- moved global variables to global variable section.
- moved manual img orientation style fixes to add/remove class.
- created helper function for resizing imgs during orientation changes.

--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,12 @@ body {
 	background-color: #fef;
 }
 
+/* set image to fit landscape or portrait sizes (for orientation changes) */
+img.landscape { width: 100vh; height: 100vh; }
+img.portrait {	width: 100vw; height: 100vw; }
+
 /* make img elements unselectable/undraggable */
-.unselectable {
+img.unselectable {
 	user-drag: none; 
 	user-select: none;
 	-moz-user-select: none;
