--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,9 @@ img.unselectable {
 	min-width: 100%;
 	height: 11vh;	
 	min-height: 55px;
-	opacity: 0.66;
+}
+.ui-page-active .ui-btn-active img {
+	opacity: 0.5;
 }
 /* nav button sizes fixed on top */
 .nav-button {
