--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,6 @@ body {
 	margin: 0 auto;
 }
 
-/* main  wrapper for each page should be full device height */
-.main {
-	height: 100vh !important;
-	background-color: #aaa;
-}
-
 /* set image to fit landscape or portrait sizes (for orientation changes) */
 img.landscape { width: 80vh; height: 80vh; }
 img.portrait {	width: 80vw; height: 80vw; }
@@ -31,13 +25,19 @@ img.unselectable {
 	-ms-user-select: none;
 }
 
+/* main  wrapper for each page should be full device height */
+.main {
+	height: 100vh !important;
+	background-color: #aaa;
+}
+
 /* main polaroid section that has img inside */
 .polaroid {
-	position: relative;
 	background-color: #fafafa;
 	margin: 16vh auto 0;
 	min-width: 320px;
 	width: 50vw;
+	min-height: 240px;
 	height: 66vh;
 	border-radius: 1%;
 	/* box-shadow */
@@ -63,10 +63,17 @@ img.unselectable {
 	min-height: 100%;
 	border-radius: 2%;
 }
+/* div container to use display: table/table-cell to veritically center p */
+.caption-container {
+	display: table;
+	/*background-color: #f00;*/
+	height: 25%;
+}
 /* polaroid caption underneath greyscale photo */
 .polaroid p {
+	display: table-cell;
+	vertical-align: middle;
 	margin: 0;
-	padding: 3%;
 	text-align: center;
 	font-family: "Reenie Beanie", "Nothing You Could Do";
 	font-size: 2em;
