--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,11 @@ body {
 	background-color: #aaa !important;
 }
 
-/* center header nav buttons and footer */
+
+/* ========================================================================= */
+/* ========================= Global Helper Styles ========================== */
+/* ========================================================================= */
+/* center elements such as header nav buttons and footer */
 .center {
 	text-align: center;
 	margin: 0 auto;
@@ -25,6 +29,42 @@ img.unselectable {
 	-ms-user-select: none;
 }
 
+
+/* ========================================================================= */
+/* ====================== Navigation Header & Buttons ====================== */
+/* ========================================================================= */
+.nav {
+	background-color: #aaa;
+}
+.nav-container {
+	overflow: hidden;
+}
+/* nav img */
+.nav-container img {
+	min-width: 100%;
+	height: 11vh;	
+	min-height: 40px;
+}
+.ui-page-active .ui-btn-active img {
+	opacity: 0.5;
+}
+/* nav button sizes fixed on top */
+.nav-button {
+	height: 11vh;
+	min-height: 40px;
+	border-radius: 0 !important;
+	margin: 0;
+	padding: 0;
+}
+/* handle nav-button-widths to fit the screen perfectly on various viewports */
+@media all and (min-width: 360px) {	.nav-button { width: 10.5vw; } }
+@media all and (min-width: 640px) { .nav-button { width: 10.8vw; } }
+@media all and (min-width: 943px) { .nav-button { width: 10.9vw; } }
+
+
+/* ========================================================================= */
+/* ========================= Main Content Section ========================== */
+/* ========================================================================= */
 /* main  wrapper for each page should be full device height */
 .main {
 	height: 100vh !important;
@@ -37,7 +77,7 @@ img.unselectable {
 	margin: 16vh auto 0;
 	min-width: 320px;
 	width: 50vw;
-	min-height: 240px;
+	min-height: 250px;
 	height: 66vh;
 	border-radius: 1%;
 	/* box-shadow */
@@ -83,32 +123,25 @@ img.unselectable {
 }
 
 
-.nav {
-	background-color: #aaa;
+/* ========================================================================= */
+/* ============================ Footer Section ============================= */
+/* ========================================================================= */
+div.footer {
+	display: table;
+	margin: 0;
+	padding: 0;
+	height: 40px;
 }
-.nav-container {
-	overflow: hidden;
+footer {
+	display: table-cell;
+	vertical-align: middle;
 }
-/* nav img */
-.nav-container img {
-	min-width: 100%;
-	height: 11vh;	
-	min-height: 55px;
-}
-.ui-page-active .ui-btn-active img {
-	opacity: 0.5;
-}
-/* nav button sizes fixed on top */
-.nav-button {
-	height: 11vh;
-	min-height: 55px;
-	border-radius: 0 !important;
+footer p {
+	font-family: monospace;
+	font-size: 1em;
 	margin: 0;
 	padding: 0;
 }
-/* handle nav-button-widths to fit the screen perfectly on various viewports */
-@media all and (min-width: 360px) {	.nav-button { width: 10.5vw; } }
-@media all and (min-width: 640px) { .nav-button { width: 10.8vw; } }
-@media all and (min-width: 943px) { .nav-button { width: 10.9vw; } }
+
 
 
