--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,13 @@ img.unselectable {
 	text-shadow: 0px 0px 1px #888;
 	line-height: 100%;
 }
+/* for some reason, when JQM appends the popup elements (placeholders are placed
+   in place of where you put the popup div) they're stuck with opacity: 0 */
+.ui-popup img {
+	opacity: 1 !important;
+	max-width: 90vw;
+	max-height: 90vh;
+}
 
 
 /* ========================================================================= */
