--- a/css/main.css
+++ b/css/main.css
@@ -71,11 +71,22 @@ img.unselectable {
 	background-color: #aaa;
 }
 
+.polaroid-container {
+	position: relative;
+	overflow: hidden;
+	margin: 13vh auto 0;
+	background-color: #f0f;
+}
+
+.polaroid-container td {
+	width: 33vw;
+	text-align: center;
+}
+
 /* main polaroid section that has img inside */
 .polaroid {
 	background-color: #fafafa;
-	margin: 16vh auto 0;
-	min-width: 320px;
+	min-width: 250px;
 	width: 50vw;
 	min-height: 250px;
 	height: 66vh;
@@ -86,7 +97,7 @@ img.unselectable {
 	box-shadow: 3px 6px 11px 0px #000;
 }
 /* container for overflow: hidden on greyscale photo */
-.polaroid-container {
+.polaroid-img-container {
 	position: relative;
 	overflow: hidden;
 	margin: 0 auto;
@@ -104,7 +115,7 @@ img.unselectable {
 	border-radius: 2%;
 }
 /* div container to use display: table/table-cell to veritically center p */
-.caption-container {
+.polaroid-p-container {
 	display: table;
 	/*background-color: #f00;*/
 	height: 25%;
@@ -120,13 +131,6 @@ img.unselectable {
 	color: #888;
 	text-shadow: 0px 0px 1px #888;
 	line-height: 100%;
-}
-/* for some reason, when JQM appends the popup elements (placeholders are placed
-   in place of where you put the popup div) they're stuck with opacity: 0 */
-.ui-popup img {
-	opacity: 1 !important;
-	max-width: 90vw;
-	max-height: 90vh;
 }
 
 
