--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
 
 /* bkg color during transitions */
 body {
-	background-color: #aaa !important;
+	background: #f06;
+	background: linear-gradient(45deg, #f06, yellow);
 }
 
 
@@ -29,32 +30,47 @@ img.unselectable {
 	-ms-user-select: none;
 }
 
+/* all anchor tag colours */
+a.ui-link {
+	color: #000;
+}
+a.ui-link:hover {
+	color: #e00;
+}
+
 
 /* ========================================================================= */
 /* ====================== Navigation Header & Buttons ====================== */
 /* ========================================================================= */
-.nav {
-	background-color: #aaa;
+/* header nav & buttons */
+.header {
+	opacity: 0.66;
 }
-.nav-container {
-	overflow: hidden;
+.nav a:hover {
+	box-shadow: -1px 0px 11px rgba(0, 85, 153, 0.5);
 }
-/* nav img */
-.nav-container img {
-	min-width: 100%;
-	height: 11vh;	
-	min-height: 40px;
+.nav a:active {
+	box-shadow: -1px 0px 11px rgba(0, 85, 153, 0.5);
+	background-color: #e00 !important;
+	color: #ee0 !important;
 }
-.ui-page-active .ui-btn-active img {
-	opacity: 0.5;
+.nav a {
+	background-color: #e9e9e9 !important;
+	border: 0 !important;
+	color: #000 !important;
+}
+/* leave a shadow on the currently active page's button */
+.nav-active {
+	box-shadow: -1px 0px 11px rgba(0, 85, 153, 0.5);
 }
 /* nav button sizes fixed on top */
 .nav-button {
 	height: 11vh;
+	line-height: 11vh;
 	min-height: 40px;
-	border-radius: 0 !important;
 	margin: 0;
-	padding: 0;
+	padding: 15px 0 0 0;
+	border-radius: 0 !important;
 }
 /* handle nav-button-widths to fit the screen perfectly on various viewports */
 @media all and (min-width: 360px) {	.nav-button { width: 10.5vw; } }
@@ -68,11 +84,12 @@ img.unselectable {
 /* main  wrapper for each page should be full device height */
 .main {
 	height: 100vh !important;
-	background-color: #aaa;
 	position: relative;
-
+	background: #f06;
+	background: linear-gradient(45deg, #f06, yellow);
 }
 
+/* the main polaroid table wrapper (has the arrows and polaroid inside ) */
 table.polaroid-container {
     margin: auto;
     position: absolute;
@@ -84,15 +101,25 @@ table.polaroid-container {
     left: 0;
     right: 0;
 }
-
+/* each polaroid table data should be evenly split */
 .polaroid-container td {
 	width: 33vw;
 	text-align: center;
 }
-
+/* arrows */
+.fa-arrow-left, .fa-arrow-right {
+	color: #000;
+	opacity: 0.66;
+}
+.right-arrow-hover {
+	color: #e00;	
+}
+.left-arrow-hover {
+	color:#ee0;
+}
 /* main polaroid section that has img inside */
 .polaroid {
-	background-color: #fafafa;
+	background-color: #f3f3f3;
 	min-width: 250px;
 	width: 50vw;
 	min-height: 280px;
@@ -135,8 +162,8 @@ table.polaroid-container {
 	text-align: center;
 	font-family: "Reenie Beanie", "Nothing You Could Do";
 	font-size: 2em;
-	color: #888;
-	text-shadow: 0px 0px 1px #888;
+	color: #666;
+	text-shadow: 0px 0px 1px #666;
 	line-height: 100%;
 }
 
@@ -149,6 +176,7 @@ div.footer {
 	margin: 0;
 	padding: 0;
 	height: 40px;
+	opacity: 0.66;
 }
 footer {
 	display: table-cell;
