--- a/css/main.css
+++ b/css/main.css
@@ -106,17 +106,68 @@ table.polaroid-container {
 	width: 33vw;
 	text-align: center;
 }
-/* arrows */
+
 .fa-arrow-left, .fa-arrow-right {
 	color: #000;
 	opacity: 0.66;
+	transition: all 0.5s ease;
 }
+/* arrow transitions start slowly as defined above */
+.fa-arrow-left:hover, .fa-arrow-right:hover {
+	background: #000;
+	padding: 20px;	
+	border: 1px solid black;
+	border-radius: 50%;
+}
+/* returning transitions 'pop' faster for better UX */
+.fa-arrow-left:active, .fa-arrow-right:active {
+	transition-duration: 0.2s;
+	background: inherit;
+	padding: 0;	
+	border: none;
+	border-radius: 50%;
+}
+/* arrows change colour on hover (different colour for different arrow) */
 .right-arrow-hover {
 	color: #e00;	
 }
 .left-arrow-hover {
 	color:#ee0;
 }
+
+/* polaroid now starts off -1deg rotated.. hover fixes rotation */
+.rotate {
+    -webkit-transform: rotate(-1deg);
+    -moz-transform: rotate(-1deg);
+    -ms-transform: rotate(-1deg);
+    -o-transform: rotate(-1deg);
+    transform: rotate(-1deg);
+
+    -webkit-transform-origin: 50% 50%;
+    -moz-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    -o-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+
+    -webkit-transition: 300ms ease all;
+    -moz-transition: 300ms ease all;
+    -o-transition: 300ms ease all;
+    transition: 300ms ease all;
+}
+.rotate:hover {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+
+    -webkit-transform-origin: 50% 50%;
+    -moz-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    -o-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+}
+
 /* main polaroid section that has img inside */
 .polaroid {
 	background-color: #f3f3f3;
