manually control data-tap-toggle so that toolbar does not show up on every page transition

--- a/css/main.css
+++ b/css/main.css
@@ -335,3 +335,11 @@ footer p {
 @media all and (min-width: 800px) { footer p { font-size: 1.2em; } }
 
 
+/* ========================================================================= */
+/* ======================== Header & Footer Toolbar ======================== */
+/* ========================================================================= */
+[data-position="fixed"] {
+	opacity: 0 !important;
+}
+
+
