--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,7 @@ footer p {
 /* toolbar needs to start with opacity: 0 because page loads with it initially
    in view and you can see a flicker of it before the js code hides it */
 [data-position="fixed"] {
-	display: none;
+	display: none !important;
 }
 
 
