added namespaces to on mouse handlers. fixed rightswipe direction. added a loop for better UI/UX on display:none of img-gesture-popup

--- a/css/main.css
+++ b/css/main.css
@@ -247,7 +247,9 @@ table.polaroid-container {
 	width: 50%;
 	margin: 0;
 	padding: 0;
+	
 	opacity: 0;
+	display: none;
 }
 .img-gesture-popup p {
 	color: #000;
